# point-in-time-datawarehouse

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: metric_map.yaml  reconciliation.yaml  sla.yaml  sources.yaml  universe.yaml
docs/: architecture.md  dependency_dag.md  findings.md  limitations.md  postmortems.md  runbook.md
docs/dictionary/: core.entity.md  core.entity_ticker.md  core.fundamental_fact.md  core.price_fact.md  dq.check_result.md  dq.exception.md  ops.pipeline_run.md  raw.payload.md  stg.edgar_fundamental_fact.md
migrations/: env.py
migrations/sql/: 0001_initial_schema.sql  0001_initial_schema_downgrade.sql  0002_raw_payload.sql  0002_raw_payload_downgrade.sql  0003_stg_and_entity.sql  0003_stg_and_entity_downgrade.sql  0004_core_facts.sql  0004_core_facts_downgrade.sql  0005_dq.sql  0005_dq_downgrade.sql
migrations/versions/: 0001_initial_schema.py  0002_raw_payload.py  0003_stg_and_entity.py  0004_core_facts.py  0005_dq.py
src/pdw/: __init__.py  availability.py  backtest.py  cli.py  config.py  coverage.py  db.py  dictionary.py  dq_checks.py  dq_engine.py  ingest.py  load_fundamentals.py  load_prices.py  logging.py  metric_map.py  ops.py  parse.py  query.py  ratelimit.py  retry.py
src/pdw/sources/: __init__.py  edgar.py  tiingo.py  yfinance_source.py
tests/: conftest.py  test_backtest.py  test_cli.py  test_config.py  test_coverage.py  test_dictionary.py  test_dq_checks.py  test_dq_engine.py  test_ingest.py  test_ingest_helpers.py  test_invariants.py  test_load_fundamentals.py  test_load_prices.py  test_logging.py  test_metric_map.py  test_ops.py  test_parse.py  test_parse_db.py  test_query.py  test_ratelimit.py  test_retry.py  test_universe.py
tests/fixtures/edgar/: aapl_companyfacts_sample.json  ticker_map_sample.json
tests/fixtures/yfinance/: aapl_history_sample.csv
tests/sources/: test_edgar.py  test_tiingo.py  test_yfinance_source.py
