[project]
name = "pdw"
version = "0.1.0"
description = "Bitemporal, point-in-time correct financial data warehouse."
readme = "README.md"
authors = [
    { name = "Winston Garth", email = "winstonpatrickgarth@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "polars>=1.42.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "typer>=0.27.0",
]

[project.scripts]
pdw = "pdw:main"

[build-system]
requires = ["uv_build>=0.11.5,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: hits a live network service; excluded from the default run",
]
addopts = "-m 'not integration'"
